# energy-ai-education

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  content-improvement.yml
.github/workflows/: ci.yml  docs.yml  scorecard.yml
LICENSES/: LICENSE-CODE  LICENSE-DATA  LICENSE-DOCS
benchmarks/tasks/load-forecasting-dayahead/: README.md
datasets/cards/: TEMPLATE.md
datasets/index/: README.md
docs/: contributing.md  index.md
docs/benchmarks/: index.md  load-forecasting-dayahead.md
docs/concepts/: taxonomy.yml
docs/datasets/: index.md  template.md
docs/eadx/: index.md  mappings.md  observations.md
docs/learning-paths/: advanced.md  applied.md  foundations.md  overview.md
docs/stylesheets/: extra.css
governance/: MAINTAINERS.md
src/eadx/: __init__.py  __main__.py  cli.py  package.py  validator.py
standards/eadx/: README.md
standards/eadx/schemas/: observations.json
standards/mappings/: cim-markets.md  cim.md  edi-retail.md  green-button.md  openadr.md  openfmb.md
tests/: test_eadx_package.py  test_eadx_validator.py
