[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "energy-ai-education"
version = "0.1.0"
description = "Energy AI Education Hub — EA-DX Package library and evaluation harness"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "Craig Merry"}]
keywords = ["energy", "machine-learning", "power-systems", "forecasting", "ea-dx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nbval>=0.11",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-material-extensions>=1.3",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "plotly>=5.0",
]

[project.scripts]
eadx = "eadx.cli:main"

[project.urls]
Homepage = "https://github.com/craigm26/energy-ai-education"
Repository = "https://github.com/craigm26/energy-ai-education"
Issues = "https://github.com/craigm26/energy-ai-education/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src", "benchmarks/harness"]
addopts = "-q --tb=short"
markers = [
    "smoke: quick smoke tests (run in CI on every push)",
    "slow: slow tests (run in CI on schedule or release)",
]
